...
    setState(() {
      isLoginButtonDisabled = true; // Disable the login button
    });

    FirebaseAuth.instance
        .signInWithEmailAndPassword(
      email: emailController.text,
      password: passwordController.text,
    )
        .then((value) async {
      isLoggedIn = true;
      SharedPreferences prefs = await SharedPreferences.getInstance();
      prefs.setBool('isLoggedIn', isLoggedIn);
      Navigator.push(context, MaterialPageRoute(builder: (context) => HomeScreen()));
...
                ),
          ),
          const SizedBox(height: defaultPadding),
          Hero(
            tag: "login_btn",
            child: ElevatedButton (
              key: const ValueKey('connecter'),
              onPressed:(){
                 if (_formKey.currentState!.validate()) {
      if (!isLoginButtonDisabled) {
        loginUser();
      }
    }
...
