...
              indicatorColor: Styles.textColor,
                  indicatorSize: TabBarIndicatorSize.label,
                  labelColor: Styles.textColor,

           
            tabs: const [
              Tab(text: 'Tous'),
              Tab(text: 'Fruits'),
              Tab(text: 'Légumes'),
              Tab(text: 'Herbes'),
            ],
          ),
      ),
...
    },
    icon: const Icon(Icons.favorite_border_outlined),
    //selectedIcon: Icon(Icons.favorite),
    ),
    const SizedBox(width: 24,),
     IconButton(
      key: ValueKey('search_icon'),
      onPressed: (){
         if (_isBlocked) {
      final snackBar = SnackBar(
  content: Text(
  "cet utilisateur a été désactivé, veuillez contacter le support pour obtenir de l'aide",
    style: TextStyle(color: Colors.white),
...
